--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 nav{
@@ -12,20 +14,20 @@ nav{
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     background-color: #bae8e8;
-    
+    width: 100%;
 }
 .logo{
     color: rgb(10, 10, 10);
     text-transform: uppercase;
     letter-spacing: 3px;
     font-size: 20px;
-    padding-right: 40% ;
     padding-left: 5%;
 }
 .nav-links{
     display: flex;
-    justify-content: space-around;
-    width: 40%;
+    padding-left: 10%; 
+    padding-right: 10%;    
+   
 }
 
 .nav-links a{
@@ -65,8 +67,7 @@ overflow-x: hidden;
     }
     .nav-links{
         position: absolute;
-        padding-top: 2%;
-        padding-bottom: 60%;
+        padding-bottom: 80%;
         left: 0px;
         height: 92vh;
         top: 8vh;
@@ -75,7 +76,7 @@ overflow-x: hidden;
         flex-direction: column;
         align-items: center;
         width: 50%;
-        transform: translateX(-200%);
+        transform: translateX(-100%);
         transition: transform 0.5s ease-in;
     }
     
@@ -87,9 +88,12 @@ overflow-x: hidden;
     .burger{
         display: block;
         padding-left: 5%;
-        padding-right: 25%;
+        width: 20%;
     }
-    
+    .logo{
+        padding-left: 25%;
+    }
+      
 }
 
 .nav-active{
