--- a/style.css
+++ b/style.css
@@ -1,125 +1,188 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    width: 100%;
+/* navbar css */
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  width: 100%;
+  overflow-x: hidden;
+  text-decoration: none;
+}
+
+nav {
+  display: flex;
+  /* justify-content: space-around; */
+  align-items: center;
+  min-height: 8vh;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  background-color: #bae8e8;
+  width: 100%;
+}
+.logo {
+  text-decoration: none;
+  color: rgb(10, 10, 10);
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 20px;
+  padding-left: 5%;
+  width: 60%;
+}
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav-links a {
+  display: flex;
+  justify-content: space-around;
+  color: rgb(10, 10, 10);
+  text-decoration: none;
+  letter-spacing: 2px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.nav-links li {
+  list-style: none;
+}
+.burger {
+  display: none;
+  cursor: pointer;
+}
+.burger div {
+  width: 25px;
+  height: 2px;
+  background-color: black;
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 1024px) {
+  .nav-links {
+    display: flex;
+    justify-content: space-around;
+    width: 55%;
+  }
+}
+
+@media screen and (max-width: 786px) {
+  body {
     overflow-x: hidden;
-}
-
-nav{
-    display: flex;
-    /* justify-content: space-around; */
-    align-items: center;
-    min-height: 8vh;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
+  }
+  .nav-links {
+    position: absolute;
+    padding-bottom: 80%;
+    left: 0px;
+    height: 92vh;
+    top: 8vh;
     background-color: #bae8e8;
-    width: 100%;
-}
-.logo a{
-    text-decoration: none;
-    color: rgb(10, 10, 10);
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    font-size: 20px;
-    padding-left: 5%;
-}
-.nav-links{
     display: flex;
-    padding-left: 10%; 
-    padding-right: 10%;    
-   
-}
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease-in;
+  }
 
-.nav-links a{
-    color: rgb(10, 10, 10);
-text-decoration: none;
-letter-spacing: 2px;
-font-weight: bold;
-font-size: 14px;
-}
-
-.nav-links li{
-    list-style: none;
-}
-.burger{
-    display: none;
-    cursor: pointer;
-}
-.burger div{
- width: 25px;
- height: 2px;
- background-color: black;
- margin: 5px;
- transition: all 0.3s ease;
-}
-
-@media screen and (max-width:1024px){
-    .nav-links{
-        display: flex;
-        justify-content: space-around;
-        width: 55%;
-    }
-}
-
-@media screen and (max-width:786px){
-    body{
-overflow-x: hidden;
-    }
-    .nav-links{
-        position: absolute;
-        padding-bottom: 80%;
-        left: 0px;
-        height: 92vh;
-        top: 8vh;
-        background-color: #bae8e8;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 50%;
-        transform: translateX(-100%);
-        transition: transform 0.5s ease-in;
-    }
-    
-    
-    .nav-links li{
-        opacity: 0;
-       
-    }
-    .burger{
-        display: block;
-        padding-left: 5%;
-        width: 20%;
-    }
-    .logo{
-        padding-left: 25%;
-    }
-      
-}
-
-.nav-active{
-    transform: translateX(0);
-}
-
-@keyframes navLinkFade{
-    from{
-        opacity: 0;
-        transform: translateX(50px);
-    }
-    to{
-        opacity: 1;
-        transform: translateX(0px);
-    }
-}
-
-.toggle .line1{
-    transform: rotate(-45deg) translate(-5px,6px);
-}
-
-.toggle .line2{
+  .nav-links li {
     opacity: 0;
+  }
+  .burger {
+    display: block;
+    padding-left: 5%;
+    width: 20%;
+  }
+  .logo {
+    padding-left: 25%;
+  }
 }
 
-.toggle .line3{
-    transform: rotate(45deg) translate(-5px,-6px);
+.nav-active {
+  transform: translateX(0);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+  opacity: 0;
+}
+
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+/* footer css */
+footer {
+  background-color: black;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+}
+footer p {
+  padding: 10px;
+}
+footer img {
+  width: 32px;
+  height: 32px;
+  padding: 3px;
+}
+footer div {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  text-align: center;
+}
+
+#footermenu p {
+  font-size: small;
+  padding: 5px;
+  text-align: center;
+}
+@media screen and (max-width: 786px) {
+  footer {
+    background-color: black;
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+  }
+  footer p {
+    padding: 10px;
+  }
+  footer img {
+    width: 32px;
+    height: 32px;
+    padding: 3px;
+  }
+  footer div {
+    float: left;
+    width: 45%;
+    height: 60%;
+  }
+  div #footermenu {
+    text-align: justify;
+    padding: 10px;
+  }
+  #footermenu p {
+    font-size: xx-smaller;
+    padding: 4px;
+    text-align: center;
+  }
+
+  label #menu {
+    padding-top: 100px;
+    text-align: center;
+  }
 }
