--- a/style.css
+++ b/style.css
@@ -124,6 +124,15 @@ nav {
   transform: rotate(45deg) translate(-5px, -6px);
 }
 
+/* Section CSS */
+
+section{
+    width: 100%;
+    height: 38rem;
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+}
+
 /* footer css */
 footer {
   background-color: black;
@@ -168,7 +177,7 @@ footer div {
   }
   footer div {
     float: left;
-    width: 45%;
+    width: 50%;
     height: 60%;
   }
   div #footermenu {
