--- a/style.css
+++ b/style.css
@@ -133,6 +133,15 @@ section{
     text-align: center;
 }
 
+@media screen and (max-width: 786px) {
+    section{
+        width: 100%;
+        height: 38rem;
+        font-family: "Montserrat", sans-serif;
+        text-align: center;
+    }
+}
+
 /* footer css */
 footer {
   background-color: black;
