--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ nav {
   font-weight: bold;
   background-color: #bae8e8;
   width: 100%;
+  /* position: fixed; */
+  
 }
 .logo {
   text-decoration: none;
@@ -40,6 +42,10 @@ nav {
   letter-spacing: 2px;
   font-weight: bold;
   font-size: 14px;
+}
+
+#home{
+  padding: 5%;
 }
 
 .nav-links li {
@@ -148,20 +154,54 @@ footer {
   color: white;
   font-family: "Montserrat", sans-serif;
   text-align: center;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 45% 10% 45%;
+  grid-template-areas:
+  "socialmedia footermenu contacts location"
+  ". . . ."
+  ". copyright copyright .";
+  align-items: center;
+  justify-content: center;
+  
 }
-footer p {
-  padding: 10px;
-}
+
 footer img {
   width: 32px;
   height: 32px;
   padding: 3px;
 }
-footer div {
-  float: left;
-  width: 20%;
-  padding: 10px;
-  text-align: center;
+#socialmedia{
+  grid-area: socialmedia;
+  padding-bottom: 2%;
+  padding-top: 4%;
+
+}
+
+#footermenu{
+  grid-area: footermenu;
+  padding-bottom: 2%;
+  padding-top: 4%;
+
+}
+
+#contacts{
+  grid-area: contacts;
+  padding-bottom: 2%;
+  padding-top: 4%;
+
+}
+
+#location{
+  grid-area: location;
+  padding-bottom: 2%;
+  padding-top: 4%;
+
+}
+
+#copyright{
+  grid-area: copyright;
+  padding-bottom: 2%;
 }
 
 #footermenu p {
@@ -170,37 +210,68 @@ footer div {
   text-align: center;
 }
 @media screen and (max-width: 786px) {
-  footer {
-    background-color: black;
-    color: white;
-    font-family: "Montserrat", sans-serif;
-    text-align: center;
-  }
-  footer p {
-    padding: 10px;
-  }
-  footer img {
-    width: 32px;
-    height: 32px;
-    padding: 3px;
-  }
-  footer div {
-    float: left;
-    width: 50%;
-    height: 60%;
-  }
-  div #footermenu {
-    text-align: justify;
-    padding: 10px;
-  }
-  #footermenu p {
-    font-size: xx-smaller;
-    padding: 4px;
-    text-align: center;
-  }
+  
+/* footer css */
+footer {
+  background-color: black;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  display: grid;
+  grid-template-columns: 50% 50% ;
+  grid-template-rows: 30% 5% 30% 5% 30%;
+  grid-template-areas:
+  "socialmedia footermenu "
+  ". ."
+  "contacts contacts"
+  "location location"
+  "copyright copyright"
+  ;
+}
 
-  label #menu {
-    padding-top: 100px;
-    text-align: center;
-  }
+footer img {
+  width: 30px;
+  height: 30px;
+  padding: 3px;
+}
+#socialmedia{
+  grid-area: socialmedia;
+  padding-bottom: 2%;
+  padding-top: 4%;
+}
+
+#footermenu{
+  grid-area: footermenu;
+  padding-bottom: 2%;
+  padding-top: 4%;
+}
+
+#contacts{
+  grid-area: contacts;
+  padding-bottom: 2%;
+  padding-top: 4%;
+  font-size: smaller;
+  font-weight: 100;
+}
+
+#location{
+  grid-area: location;
+  padding-bottom: 2%;
+  padding-top: 4%;
+  font-size: smaller;
+  font-weight: 100;
+}
+
+#copyright{
+  grid-area: copyright;
+  padding-top: 4%;
+  padding-bottom: 4%;
+  font-size: smaller;
+}
+
+#footermenu p {
+  font-size: small;
+  padding: 5px;
+  text-align: center;
+}
 }
