--- a/style.css
+++ b/style.css
@@ -134,9 +134,21 @@ nav {
 
 section{
     width: 100%;
-    height: 38rem;
+    height: auto;
     font-family: "Montserrat", sans-serif;
     text-align: center;
+    padding-bottom: 5%;
+}
+
+
+h1{
+  font-size: xx-large;
+}
+
+#aboutus p{
+  font-size: x-large;
+  font-weight: 600;
+  padding-bottom: 2%;
 }
 
 @media screen and (max-width: 786px) {
