--- a/style.css
+++ b/style.css
@@ -5,25 +5,51 @@
   box-sizing: border-box;
   width: 100%;
   overflow-x: hidden;
-  text-decoration: none;
+}
+/* body{
+  background-color: rgb(202, 236, 202);
+} */
+
+:root {
+  --title-color:rgb(46, 182, 46);
 }
 
+
+p {
+  font-size: 1.2rem;
+  font-weight: 100;
+  text-align: center;
+  
+}
+li {
+  list-style-position: inside;
+}
+h1 {
+  font-size: 1.8rem;
+  text-align: center;
+  color: var(--title-color);
+}
+.title {
+  color: var(--title-color);
+  font-size: 1.4rem;
+  font-weight: 500;
+  text-align: center;
+  padding: 1%;
+}
 nav {
   display: flex;
   /* justify-content: space-around; */
   align-items: center;
-  min-height: 8vh;
+  min-height: 10vh;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
-  background-color: #bae8e8;
+  background-color:rgb(126, 196, 126);
   width: 100%;
   /* position: fixed; */
-  
 }
 .logo {
+  color: green;
   text-decoration: none;
-  color: rgb(10, 10, 10);
-  text-transform: uppercase;
   letter-spacing: 3px;
   font-size: 20px;
   padding-left: 5%;
@@ -44,7 +70,7 @@ nav {
   font-size: 14px;
 }
 
-#home{
+#home {
   padding: 5%;
 }
 
@@ -71,9 +97,26 @@ nav {
   }
 }
 
+/* Only for Navbar */
 @media screen and (max-width: 786px) {
   body {
     overflow-x: hidden;
+  }
+
+  h1 {
+    font-size: 2rem;
+    text-align: center;
+    color: var(--title-color);
+  }
+  p {
+    text-align: center;
+  }
+  .title {
+    color: var(--title-color);
+    font-size: 1.4rem;
+    font-weight: 500;
+    text-align: center;
+    padding: 1%;
   }
   .nav-links {
     position: absolute;
@@ -132,33 +175,37 @@ nav {
 
 /* Section CSS */
 
-section{
+section {
+  width: 100%;
+  height: auto;
+  font-family: "Montserrat", sans-serif;
+  padding-bottom: 5%;
+}
+#assist {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr 3fr 1fr;
+  grid-template-rows: 1fr;
+  row-gap: 1fr;
+  grid-template-areas: ". assist_left . assist_right .";
+}
+
+#assist_left {
+  grid-area: assist_left;
+  padding-left: 10%;
+}
+#assist_right {
+  height: auto;
+  grid-area: assist_right;
+}
+
+/* @media screen and (max-width: 786px) {
+  section {
     width: 100%;
     height: auto;
     font-family: "Montserrat", sans-serif;
-    text-align: center;
-    padding-bottom: 5%;
-}
-
-
-h1{
-  font-size: xx-large;
-}
-
-#aboutus p{
-  font-size: x-large;
-  font-weight: 600;
-  padding-bottom: 2%;
-}
-
-@media screen and (max-width: 786px) {
-    section{
-        width: 100%;
-        height: 38rem;
-        font-family: "Montserrat", sans-serif;
-        text-align: center;
-    }
-}
+    font-size: 0.9rem;
+  }
+} */
 
 /* footer css */
 footer {
@@ -170,12 +217,11 @@ footer {
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: 45% 10% 45%;
   grid-template-areas:
-  "socialmedia footermenu contacts location"
-  ". . . ."
-  ". copyright copyright .";
+    "socialmedia footermenu contacts location"
+    ". . . ."
+    ". copyright copyright .";
   align-items: center;
   justify-content: center;
-  
 }
 
 footer img {
@@ -183,35 +229,31 @@ footer img {
   height: 32px;
   padding: 3px;
 }
-#socialmedia{
+#socialmedia {
   grid-area: socialmedia;
   padding-bottom: 2%;
   padding-top: 4%;
-
 }
 
-#footermenu{
+#footermenu {
   grid-area: footermenu;
   padding-bottom: 2%;
   padding-top: 4%;
-
 }
 
-#contacts{
+#contacts {
   grid-area: contacts;
   padding-bottom: 2%;
   padding-top: 4%;
-
 }
 
-#location{
+#location {
   grid-area: location;
   padding-bottom: 2%;
   padding-top: 4%;
-
 }
 
-#copyright{
+#copyright {
   grid-area: copyright;
   padding-bottom: 2%;
 }
@@ -221,69 +263,94 @@ footer img {
   padding: 5px;
   text-align: center;
 }
+
 @media screen and (max-width: 786px) {
-  
-/* footer css */
-footer {
-  background-color: black;
-  color: white;
-  font-family: "Montserrat", sans-serif;
-  text-align: center;
-  display: grid;
-  grid-template-columns: 50% 50% ;
-  grid-template-rows: 30% 5% 30% 5% 30%;
-  grid-template-areas:
-  "socialmedia footermenu "
-  ". ."
-  "contacts contacts"
-  "location location"
-  "copyright copyright"
-  ;
-}
+  h1 {
+    font-size: 1.3rem;
+    text-align: center;
+  }
+  * {
+    font-size: 0.9rem;
+  }
 
-footer img {
-  width: 30px;
-  height: 30px;
-  padding: 3px;
-}
-#socialmedia{
-  grid-area: socialmedia;
-  padding-bottom: 2%;
-  padding-top: 4%;
-}
+  /* footer css */
+  footer {
+    background-color: black;
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 30% 5% 30% 5% 30%;
+    grid-template-areas:
+      "socialmedia footermenu "
+      ". ."
+      "contacts contacts"
+      "location location"
+      "copyright copyright";
+  }
 
-#footermenu{
-  grid-area: footermenu;
-  padding-bottom: 2%;
-  padding-top: 4%;
-}
+  footer img {
+    width: 30px;
+    height: 30px;
+    padding: 3px;
+  }
+  #socialmedia {
+    grid-area: socialmedia;
+    padding-bottom: 2%;
+    padding-top: 4%;
+  }
 
-#contacts{
-  grid-area: contacts;
-  padding-bottom: 2%;
-  padding-top: 4%;
-  font-size: smaller;
-  font-weight: 100;
-}
+  #footermenu {
+    grid-area: footermenu;
+    padding-bottom: 2%;
+    padding-top: 4%;
+  }
 
-#location{
-  grid-area: location;
-  padding-bottom: 2%;
-  padding-top: 4%;
-  font-size: smaller;
-  font-weight: 100;
-}
+  #contacts {
+    grid-area: contacts;
+    padding-bottom: 2%;
+    padding-top: 4%;
+    font-size: smaller;
+    font-weight: 100;
+  }
 
-#copyright{
-  grid-area: copyright;
-  padding-top: 4%;
-  padding-bottom: 4%;
-  font-size: smaller;
-}
+  #location {
+    grid-area: location;
+    padding-bottom: 2%;
+    padding-top: 4%;
+    font-size: smaller;
+    font-weight: 100;
+  }
 
-#footermenu p {
-  font-size: small;
-  padding: 5px;
-  text-align: center;
-}
+  #copyright {
+    grid-area: copyright;
+    padding-top: 4%;
+    padding-bottom: 4%;
+    font-size: smaller;
+  }
+
+  #footermenu p {
+    font-size: small;
+    padding: 5px;
+    text-align: center;
+  }
+
+  #assist {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    row-gap: 1fr;
+    grid-template-areas: "assist_left assist_right";
+  }
+  #assist #title {
+    grid-area: title;
+    font-size: 1.3rem;
+  }
+  #assist_left {
+    grid-area: assist_left;
+  }
+  #assist_right {
+    grid-area: assist_right;
+  }
 }
