--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
   box-sizing: border-box;
   width: 100%;
   overflow-x: hidden;
-  scroll-behavior: smooth;
+   scroll-behavior: smooth;
+   
 }
 
 :root {
@@ -17,9 +18,11 @@ p {
   font-size: 1.2rem;
   font-weight: 100;
   text-align: center;
+  line-height: 1.6;
 }
 li {
   list-style-position: inside;
+  line-height: 1.5;
 }
 h1 {
   font-size: 1.8rem;
@@ -273,16 +276,19 @@ footer img {
   }
 
   h1 {
-    font-size: 2rem;
+    font-size: 1.6rem;
     text-align: center;
     color: var(--title-color);
+    margin: 0;
   }
   p {
     text-align: center;
+    font-size: .9rem;
+    margin: .3em 0 .3em;
   }
   .title {
     color: var(--title-color);
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-weight: 500;
     text-align: center;
     padding: 1%;
@@ -327,7 +333,7 @@ footer img {
   }
   .realty-span {
     margin-left: 0.4em;
-    margin-top: 0.1em;
+    margin-top: 0.6em;
     font-size: 1rem;
   }
   .realty-partner {
@@ -380,10 +386,11 @@ footer img {
     padding-bottom: 2%;
     padding-top: 4%;
   }
-  #footermenu {
+  #footermenu p{
     grid-area: footermenu;
-    padding-bottom: 2%;
-    padding-top: 4%;
+    margin: 0 ;
+    padding: 0;
+    
   }
   #contacts {
     grid-area: contacts;
@@ -405,11 +412,7 @@ footer img {
     padding-bottom: 4%;
     font-size: smaller;
   }
-  #footermenu p {
-    font-size: small;
-    padding: 5px;
-    text-align: center;
-  }
+  
 }
 .nav-active {
   transform: translateX(0);
