--- a/style.css
+++ b/style.css
@@ -86,6 +86,37 @@ nav {
 #home {
   padding: 5%;
 }
+
+/* Css for Products Section */
+.products-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.product-logos {
+  width: 125px;
+  height: 65px;
+  margin-left: 4em;
+}
+/* .product-logos-big{
+  width: 135px;
+  height:65px
+} */
+.product-span {
+  font-weight: 100;
+  margin-left: 0.6em;
+  margin-top: 0.6em;
+  font-size: 1.5rem;
+}
+.product {
+  display: flex;
+  width: calc(85% / 3);
+  margin-bottom: 2em;
+  margin-top: 1em;
+  align-content: center;
+}
+
+
 /* Css for Realty Section */
 .realty-container {
   display: flex;
@@ -243,7 +274,7 @@ footer img {
   /* Responsive CSS for nav-links */
   .nav-links {
     position: absolute;
-    padding-bottom: 80%;
+    padding-bottom: 55%;
     left: 0px;
     height: 92vh;
     top: 9.9vh;
@@ -293,6 +324,33 @@ footer img {
     text-align: center;
     padding: 1%;
   }
+
+
+  /*Responsive Css for Products Section */
+  .products-container {
+    display: flex;
+    flex-wrap: wrap;
+    
+  }
+  .product-logos {
+    width: 45px;
+    height: 40px;
+    margin: 0;
+    margin-top: 0.2em;
+  }
+  .product-span {
+    margin-left: 0.4em;
+    margin-top: 0.5em;
+    font-size: 1rem;
+  }
+  .product {
+    display: flex;
+    width: calc(90% / 2);
+    margin-bottom: 0.3em;
+    margin-top: 0.3em;
+    margin-left: .7em;
+  }
+
 
   /*Responsive Css for Loan Section */
   .loan-container {
