--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ nav {
 .burger {
   display: none;
   cursor: pointer;
+  overflow: hidden;
 }
 .burger div {
   width: 25px;
@@ -82,6 +83,7 @@ nav {
   background-color: black;
   margin: 5px;
   transition: all 0.3s ease;
+  overflow: hidden;
 }
 #home {
   padding: 5%;
@@ -174,7 +176,7 @@ nav {
 }
 
 .toggle .line1 {
-  transform: rotate(-45deg) translate(-5px, 6px);
+  transform: rotate(-45deg) translate(-5px, 5px);
 }
 
 .toggle .line2 {
@@ -182,7 +184,7 @@ nav {
 }
 
 .toggle .line3 {
-  transform: rotate(45deg) translate(-5px, -6px);
+  transform: rotate(45deg) translate(-5px, -5px);
 }
 
 /* Section CSS */
