--- a/phone-style.css
+++ b/phone-style.css
@@ -1,3 +1,13 @@
+/* navbar css */
+html{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  width: 100%;
+  overflow: hidden;
+  scroll-behavior: smooth;
+}
+
 @media screen and (max-width: 1024px) {
   .nav-links {
     display: flex;
@@ -22,6 +32,7 @@
     transform: translateX(-100%);
     transition: transform 0.5s ease-in;
   }
+  
 
   .nav-links li {
     opacity: 0;
